--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       { date: "2025-09-16", amount: 0.50, note: "2 Dosen, 0 Flaschen" },
       { date: "2025-09-17", amount: 1.00, note: "4 Dosen, 0 Flaschen" },
       { date: "2025-09-18", amount: 1.00, note: "3 Dosen, 1 Flaschen" },
+	  { date: "2025-09-22", amount: 1.45, note: "Spende" },
     ];
 
 
