--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       { date: "2025-09-17", amount: 1.00, note: "4 Dosen, 0 Flaschen" },
       { date: "2025-09-18", amount: 1.00, note: "3 Dosen, 1 Flaschen" },
 	  { date: "2025-09-22", amount: 1.45, note: "Spende" },
+	  { date: "2025-09-26", amount: 2.00, note: "6 Dosen 2 Flaschen" },
     ];
 
 
