--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       { date: "2025-09-18", amount: 1.00, note: "3 Dosen, 1 Flaschen" },
 	  { date: "2025-09-22", amount: 1.45, note: "Spende" },
 	  { date: "2025-09-26", amount: 2.00, note: "6 Dosen 2 Flaschen" },
+	  { date: "2025-10-06", amount: 3.15, note: "12 Dosen 1 Flaschen" },
     ];
 
 
